--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "strapi-plugin-upload": "3.2.5",
     "strapi-connector-bookshelf": "3.2.5",
     "knex": "<0.20.0",
-    "sqlite3": "latest"
+    "sqlite3": "4.1.1"
   },
   "author": {
     "name": "A Strapi developer"
